fix: layout css gap incompatibility

--- a/components/Header/header.module.scss
+++ b/components/Header/header.module.scss
@@ -5,7 +5,6 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
-  column-gap: 1em;
 
   padding: var(--spacer-m);
   -webkit-box-shadow: 0px 10px 26px -8px rgba(0, 0, 0, 0.09);
