--- a/components/Layout/layout.module.scss
+++ b/components/Layout/layout.module.scss
@@ -28,12 +28,10 @@
 
   @media only screen and (max-width: $lg) {
     flex-direction: column;
-    gap: var(--spacer-l) 0;
   }
 
   @media only screen and (max-width: $sm) {
     flex-direction: column-reverse;
-    gap: var(--spacer-l) 0;
   }
 
   &:not(:first-child) {
