--- a/components/Playlists/playlists.module.scss
+++ b/components/Playlists/playlists.module.scss
@@ -3,6 +3,7 @@
 
 .container {
   width: 50%;
+  margin-bottom: var(--spacer-l);
 
   @media only screen and (max-width: $lg) {
     width: 100%;
